force-app/main/default/objects/MandatoryManagementFields__c/MandatoryManagementFields__c.object-meta.xml
<CustomObject>
    <label>必須管理項目</label>
    <nameField>
        <displayFormat>MF-{000000000}</displayFormat>
        <label>必須管理項目No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>