force-app/main/default/objects/MandatoryManagementFields__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipLabel>必須管理項目</relationshipLabel>
    <relationshipName>MandatoryFieldsChange</relationshipName>
    <type>Lookup</type>
</CustomField>