force-app/main/default/objects/MandatoryManagementFields__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>担当確認</label>
    <type>Checkbox</type>
</CustomField>