force-app/main/default/objects/MandatoryManagementFields__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <formula>MandatoryManagementFieldsMaster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>項目名</label>
    <type>Text</type>
</CustomField>