force-app/main/default/objects/MandatoryManagementFields__c/fields/MandatoryManagementFieldsMaster__c.field-meta.xml
<CustomField>
    <fullName>MandatoryManagementFieldsMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>必須管理項目マスタ</label>
    <referenceTo>MandatoryManagementFieldsMaster__c</referenceTo>
    <relationshipLabel>必須管理項目</relationshipLabel>
    <relationshipName>MandatoryManagementFields</relationshipName>
    <type>Lookup</type>
</CustomField>